--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "require": {
         "slim/slim": "^4.5",
         "slim/psr7": "^1.2",
-        "slim/http": "^1.1"
+        "slim/http": "^1.1",
+        "slim/php-view": "^3.0",
+        "php-di/php-di": "^6.3"
     }
 }
