--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "slim/psr7": "^1.2",
         "slim/http": "^1.1",
         "slim/php-view": "^3.0",
-        "php-di/php-di": "^6.3"
+        "php-di/php-di": "^6.3",
+        "slim/flash": "^0.4.0"
     }
 }
